{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 158,
  "lineage": "f342acda-08b7-451a-7bba-5da7c12b8d17",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-Controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:088074720276:instance/i-07853bac714bf9519",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07853bac714bf9519",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02a34c6674c4fecd1",
            "private_dns": "ip-172-20-11-23.ec2.internal",
            "private_ip": "172.20.11.23",
            "public_ip": "3.237.197.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d30e35851fde83b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0627cbcc9f0084489",
            "tags": {
              "Name": "Ansible-Controller-Node"
            },
            "tags_all": {
              "Name": "Ansible-Controller-Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ba637fb4501b43ab"
            ]
          },
          "dependencies": [
            "aws_security_group.My-Lab-SG",
            "aws_subnet.Public-Subnet2",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-Managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:088074720276:instance/i-01a3b7680729b4956",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a3b7680729b4956",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e3a9ca1dfc893d6d",
            "private_dns": "ip-172-20-11-220.ec2.internal",
            "private_ip": "172.20.11.220",
            "public_ip": "44.195.34.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fcd5f319d9a04442",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0627cbcc9f0084489",
            "tags": {
              "Name": "Ansible-MN-Tomcat-Server"
            },
            "tags_all": {
              "Name": "Ansible-MN-Tomcat-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ba637fb4501b43ab"
            ]
          },
          "dependencies": [
            "aws_security_group.My-Lab-SG",
            "aws_subnet.Public-Subnet2",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-Managed-Docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:088074720276:instance/i-0243ca5ec0bbd3b04",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0243ca5ec0bbd3b04",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0adf6331eff021665",
            "private_dns": "ip-172-20-11-10.ec2.internal",
            "private_ip": "172.20.11.10",
            "public_ip": "3.236.164.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ff833b2af728476",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0627cbcc9f0084489",
            "tags": {
              "Name": "Ansible-Managed-Docker-Node"
            },
            "tags_all": {
              "Name": "Ansible-Managed-Docker-Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ba637fb4501b43ab"
            ]
          },
          "dependencies": [
            "aws_security_group.My-Lab-SG",
            "aws_subnet.Public-Subnet2",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:088074720276:instance/i-07f66847aa1eb181c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f66847aa1eb181c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030794ea931daa397",
            "private_dns": "ip-172-20-11-186.ec2.internal",
            "private_ip": "172.20.11.186",
            "public_ip": "34.201.24.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b21e533bc65bb6e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0627cbcc9f0084489",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ba637fb4501b43ab"
            ]
          },
          "dependencies": [
            "aws_security_group.My-Lab-SG",
            "aws_subnet.Public-Subnet2",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My-Lab-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088074720276:internet-gateway/igw-045f3dcd0cde07466",
            "id": "igw-045f3dcd0cde07466",
            "owner_id": "088074720276",
            "tags": {
              "Name": "My-Lab-IGW"
            },
            "tags_all": {
              "Name": "My-Lab-IGW"
            },
            "vpc_id": "vpc-03e1a46255fee6f42"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyLab_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088074720276:route-table/rtb-02ae5042946316fc8",
            "id": "rtb-02ae5042946316fc8",
            "owner_id": "088074720276",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045f3dcd0cde07466",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-03e1a46255fee6f42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.My-Lab-IGW",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyLab_Assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05deeef1674bb0d62",
            "route_table_id": "rtb-02ae5042946316fc8",
            "subnet_id": "subnet-0ebacfba90b7217ec"
          },
          "dependencies": [
            "aws_internet_gateway.My-Lab-IGW",
            "aws_route_table.MyLab_RouteTable",
            "aws_subnet.Public-Subnet",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyLab_Assn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dec370b3f2ed643",
            "route_table_id": "rtb-02ae5042946316fc8",
            "subnet_id": "subnet-0627cbcc9f0084489"
          },
          "dependencies": [
            "aws_internet_gateway.My-Lab-IGW",
            "aws_route_table.MyLab_RouteTable",
            "aws_subnet.Public-Subnet2",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My-Lab-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088074720276:security-group/sg-0ba637fb4501b43ab",
            "description": "To Allow Inbound and Outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba637fb4501b43ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "My-Lab-SG",
            "name_prefix": "",
            "owner_id": "088074720276",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My-Lab-SG"
            },
            "tags_all": {
              "Name": "My-Lab-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e1a46255fee6f42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088074720276:subnet/subnet-0ebacfba90b7217ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-0ebacfba90b7217ec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088074720276",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-03e1a46255fee6f42"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088074720276:subnet/subnet-0627cbcc9f0084489",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.11.0/24",
            "id": "subnet-0627cbcc9f0084489",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088074720276",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-03e1a46255fee6f42"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyLab-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088074720276:vpc/vpc-03e1a46255fee6f42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0279165eccd063763",
            "default_route_table_id": "rtb-0a08e36482445ad0b",
            "default_security_group_id": "sg-07839ae77d80f645c",
            "dhcp_options_id": "dopt-2cfaf556",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03e1a46255fee6f42",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a08e36482445ad0b",
            "owner_id": "088074720276",
            "tags": {
              "Name": "MyLab-VPC"
            },
            "tags_all": {
              "Name": "MyLab-VPC"
            }
          }
        }
      ]
    }
  ]
}